tempfile/derive_more/tests/compile_fail/display/legacy_fmt_syntax.rs
#[derive(derive_more::Display)]
#[display(fmt = "Stuff({}): {}", "bar")]
pub struct Foo {
    bar: String,
}

#[derive(derive_more::Display)]
#[display(fmt = "Stuff({}): {}", _0)]
pub struct Bar(String);

fn main() {}
